[tool.poetry]
name = "track-viz"
version = "0.2.1"
description = "Visualize Tracking Data"
authors = ["Julien Rossi <mr.julien.rossi@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/JulienMBABD/track-viz"
repository = "https://github.com/JulienMBABD/track-viz"
documentation = "https://track-viz.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/JulienMBABD/track-viz/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
lxml = "^4.6.4"
pandas = "^1.3.4"
seaborn = "^0.11.2"
matplotlib = "^3.5.0"
geopy = "^2.2.0"
PyYAML = "^6.0"
defusedxml = "^0.7.1"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
poetry = "^1.1.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.2"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.3.1"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
sphinx-click = "^3.0.2"
Pygments = "^2.10.0"
pyupgrade = "^2.29.1"
furo = ">=2021.11.12"
ipython = "^7.30.1"
jupyterlab = "^3.2.5"
nox = "^2021.10.1"
nox-poetry = "^0.9.0"
types-Flask = "^1.1.6"

[tool.poetry.scripts]
track-viz = "track_viz.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["track_viz"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
exclude = "src/track_viz/webserver.py"

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pandas.*",
    "seaborn.*",
    "geopy.*",
    "yaml.*",
    "defusedxml.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
